--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/2. 分页机制/8. 实现详解.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/2. 分页机制/8. 实现详解.md
@@ -200,7 +200,7 @@ static inline pteval_t pte_flags(pte_t pte)
 }
 ```
 
-### 2.1.3 xxx\_val和\_\_xxx
+### 2.1.3 xxx_val 和 __xxx
 
 >参照[/arch/x86/include/asm/pgtable.h](http://lxr.free-electrons.com/source/arch/x86/include/asm/pgtable.h#L227)
 
