--- a/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
@@ -136,24 +136,28 @@ out:
 
 ```cpp
 用户态ioctl(fd,KVM_CREATE_VM,..)
-    内核态kvm_dev_ioctl()
-        kvm_dev_ioctl_create_vm()
-            kvm_create_vm() //实现虚拟机创建的主要函数
-                kvm_arch_alloc_vm() // 分配kvm结构体
-                kvm_arch_init_vm() // 初始化kvm结构中的架构相关部分，比如中断
-                hardware_enable_all() // 使能硬件，架构相关操作
-                    hardware_enable_nolock
-                        kvm_arch_hardware_enable()
-                            kvm_shared_msr_cpu_online()     // kvm shared msr
-                            kvm_x86_ops->hardware_enable()  // 会调用 vmxon 指令
-                                crash_enable_local_vmclear()  // 清理位图
-                                kvm_cpu_vmxon()  // vmxon打开VMX模式
-                            tsc初始化规则
-                kzalloc() // 分配memslots结构，并初始化为0
-                kvm_init_memslots_id() // 初始化内存槽位(slot)的id信息
-                kvm_eventfd_init() // 初始化事件通道
-                kvm_init_mmu_notifier() // 初始化mmu操作的通知链
-                list_add(&kvm->vm_list, &vm_list) // 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
+kvm_dev_ioctl() // kvm ioctl 指令入口
+ ├─ kvm_dev_ioctl_create_vm() // 创建虚拟机
+ |   ├─ kvm_create_vm() // 实现虚拟机创建的主要函数
+ |   |   ├─ kvm_arch_alloc_vm() // 分配kvm虚拟机结构体
+ |   |   ├─ kvm_eventfd_init() // 初始化事件通道
+ |   |   ├─ kvm_alloc_memslots() // 分配memslots结构，
+ |   |   |   └─ kvzalloc() // 
+ |   |   ├─ kzalloc() // 分配kvm_io_bus结构，
+ |   |   ├─ kvm_arch_init_vm() // 初始化kvm结构中的架构相关部分，比如中断
+ |   |   ├─ hardware_enable_all() // 使能硬件，架构相关操作
+ |   |   |   └─ hardware_enable_nolock() // 
+ |   |   |       └─ kvm_arch_hardware_enable() // 
+ |   |   |           ├─ kvm_user_reture_msr_cpu_online()     // kvm
+ |   |   |           ├─ kvm_x86_ops->hardware_enable()  // 打开硬件功能, 会调用 vmxon 指令
+ |   |   |           |   ├─ kvm_cpu_vmxon()  // vmxon打开VMX模式
+ |   |   |           |   └─ ept_sync_global()  // 
+ |   |   |           ├─ kvm_check_tsc_unstable()     // 接下来还有一些初始化tsc规则
+ |   |   ├─ kvm_init_mmu_notifier() // 初始化mmu操作的通知链
+ |   |   ├─ kvm_arch_post_init_vm() // 
+ |   |   |   └─ kvm_mmu_post_init_vm() // 
+ |   |   |       └─ kvm_vm_create_worker_thread() // 
+ |   |   └─ list_add(&kvm->vm_list, &vm_list) // 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
 ```
 
 ## 4.3. 代码分析
