--- a/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
@@ -743,7 +743,9 @@ struct vcpu_svm {
 }
 ```
 
-`struct vcpu_vmx`代表**vcpu的一个运行环境**, `loaded_vmcs`指向当前vcpu使用的vmcs. 对于非嵌套(即L1)虚拟机, `loaded_vmcs`一直指向`vmcs01`, 对于嵌套(L2), 指向另外的vmcs.
+`struct vcpu_vmx`代表**vcpu的一个运行环境**, 这两个是一对一的.
+
+`loaded_vmcs`指向当前vcpu使用的vmcs. 对于非嵌套(即L1)虚拟机, `loaded_vmcs`一直指向`vmcs01`, 对于嵌套(L2), 指向另外的vmcs.
 
 ```cpp
 // arch/x86/kvm/vmx/vmcs.h
