--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -60,7 +60,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * GDTR.{base,limit} 
 * IDTR.{base,limit}
 
-* **处理器实现**可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在**隐藏**的**片上存储器**(on-chip memory)中。
+* **处理器实现！！！** 可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在**隐藏**的**片上存储器**(on-chip memory)中。
 * **不同的实现方式**可能会选择保存主机的**段寄存器**以及**选择器的隐藏部分**。
 
 由于这些原因，**软件不得使用！！！** 主机状态保存区的格式或内容，也**不得！！！** 尝试通过**修改**主机保存区的内容来更改主机状态。
@@ -81,7 +81,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `V_IRQ` - 该标志指示**是否有一个虚拟中断在客户机中挂起**。
 * **CPL** - 如果guest处于**实模式**，则CPL被**强制为0**；否则，若guest虚拟机处于**v86模式**，则将**CPL**强制设置为**3**。否则，将使用**VMCB**中保存的**CPL**。
 
-段寄存器及其隐藏部分:
+段寄存器包括selector及其隐藏部分:
 
 * ES.{base,limit,attr,sel}
 * CS.{base,limit,attr,sel} 
