--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/4. 启用SVM/1. 使能SVM[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/4. 启用SVM/1. 使能SVM[code].md
@@ -4,17 +4,26 @@
 <!-- code_chunk_output -->
 
 - [1. 整体流程](#1-整体流程)
-- [2. CPU 是否支持 SVM](#2-cpu-是否支持-svm)
-- [3. BIOS 是否禁用 SVM](#3-bios-是否禁用-svm)
-  - [3.1. 用户设置](#31-用户设置)
-  - [3.2. BIOS已打开, 但没有key](#32-bios已打开-但没有key)
+- [2. 检测支持](#2-检测支持)
+  - [2.1. CPU 是否支持 SVM](#21-cpu-是否支持-svm)
+  - [2.2. BIOS 是否禁用 SVM](#22-bios-是否禁用-svm)
+    - [2.2.1. 用户设置](#221-用户设置)
+    - [2.2.2. BIOS已打开, 但没有key](#222-bios已打开-但没有key)
+- [3. 启用svm](#3-启用svm)
 
 <!-- /code_chunk_output -->
 
 # 1. 整体流程
 
+1. 在启用svm之前, 需要检测是否可以启用, 所以在模块初始化时候进行
+2. 创建虚拟机阶段, 启用svm功能
+
+# 2. 检测支持
+
+`kvm-amd` **模块初始化**时候检查svm的支持
+
 ```cpp
-vmx_init()                               // 初始化入口
+svm_init()                               // 初始化入口
  └─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
      ├─ kvm_arch_init()                  // 架构相关初始化
      |   ├─ has_svm()                    // CPU是否支持kvm, svm.c
@@ -22,9 +31,7 @@ vmx_init()                               // 初始化入口
      |   ├─ boot_cpu_has()                // CPU是否支持一些特性
 ```
 
-`kvm-amd` **模块初始化**时候的检查
-
-# 2. CPU 是否支持 SVM
+## 2.1. CPU 是否支持 SVM
 
 判断CPU是否支持 svm
 
@@ -81,7 +88,7 @@ static inline int cpu_has_svm(const char **msg)
 #define boot_cpu_has(bit)       cpu_has(&boot_cpu_data, bit)
 ```
 
-# 3. BIOS 是否禁用 SVM
+## 2.2. BIOS 是否禁用 SVM
 
 ```cpp
 #define MSR_VM_CR               0xc0010114
@@ -110,7 +117,7 @@ static int is_disabled(void)
 
 这个判断只是直接表明了BIOS禁用了SVM的结果, 具体原因有两种情况(根据手册)
 
-## 3.1. 用户设置
+### 2.2.1. 用户设置
 
 ```cpp
 /* AMD SVM Feature Identification, CPUID level 0x8000000a (EDX), word 15 */
@@ -121,6 +128,37 @@ static int is_disabled(void)
 
 KVM没有实现
 
-## 3.2. BIOS已打开, 但没有key
+### 2.2.2. BIOS已打开, 但没有key
 
 除了用户设置以外的其他情况
+
+KVM没有实现
+
+# 3. 启用svm
+
+在**创建虚拟机**时候, 打开硬件功能, 使能SVM
+
+```cpp
+kvm_dev_ioctl() // kvm ioctl 指令入口
+ ├─ kvm_dev_ioctl_create_vm() // 创建虚拟机
+ |   ├─ kvm_create_vm() // 实现虚拟机创建的主要函数
+ |   |   ├─ hardware_enable_all() // 使能硬件，架构相关操作
+ |   |   |   └─ hardware_enable_nolock() // 
+ |   |   |       └─ kvm_arch_hardware_enable() // 
+ |   |   |           ├─ kvm_x86_ops->hardware_enable()  // 调用 svm_hardware_enable, 打开硬件功能
+```
+
+写`EFER MSR`, 打开svm
+
+```cpp
+static int svm_hardware_enable(void)
+{
+        uint64_t efer;
+        ......
+        rdmsrl(MSR_EFER, efer)); // 获取EFER MSR的内容
+        if (efer & ERER_SVME)
+                return -EBUSY;
+        ......
+        wrmsrl(MSR_EFER, efer | EFER_SVME);
+}
+```
