--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -26,7 +26,7 @@ VMCB中保存的**guest状态**是**拦截(intercept)触发时** 的处理器状
 
 例子: 假设一个guest指令触发一个**数据断点**(`#DB`)**陷阱**，该陷阱被拦截。VMCB记录了**该指令执行后**的**guest状态**，因此保存的`CS：rIP`指向**下一条指令**，并且保存的**DR7**包含**匹配数据断点**的效果。(the saved DR7 includes the effects of matching the data breakpoint)
 
-当由于`9. 指令拦截`以及`INT3`、`INTO`和`BOUND`指令引起的**MSR和IOIO**拦截和异常导致`#VMEXIT`时, **下一个顺序指令指针**(nRIP)保存在guest **VMCB控制区域**中的 `C8h` 位置上。而对于**所有其他拦截**，**nRIP重置为零**。
+当由于`9. 指令拦截`以及`INT3`、`INTO`和`BOUND`指令引起的**MSR和IOIO**拦截和异常导致`#VMEXIT`时, **下一个顺序指令指针**(`nRIP`)保存在guest **VMCB控制区域**中的 `C8h` 位置上。而对于**所有其他拦截**，**nRIP重置为零**。
 
 * 如果**当前指令**遵循**陷阱trap样式的调试异常**，并且**被拦截的指令不会导致控制流发生任何变化**，则**nRIP**是**RIP**, 将**被压入堆栈**。
 * 如果**截获的指令**会导致**控制流发生变化**，则nRIP指向**下一个顺序指令！！！**，而**不是目标指令！！！**。
