--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -7,7 +7,7 @@
 
 ![2020-09-16-22-00-21.png](./images/2020-09-16-22-00-21.png)
 
-尽管有指令名称，但出于**EXITINTINFO**的目的，**INT1**(也称为`ICEBP`)、**INT3**和**INTO指令**(操作码分别是`F1h`，`CCh`和`CEh`)引发的事件**被视为异常**，而**不是软件中断**。 只有**INTn指令**（操作码CDh）引发的事件才被视为**软件中断**。
+尽管有指令名称，但出于**EXITINTINFO**的目的，**INT1**(也称为`ICEBP`)、**INT3**和**INTO指令**(操作码分别是`F1h`，`CCh`和`CEh`)引发的事件**被视为异常**，而**不是软件中断**。 只有**INT n指令**（操作码CDh）引发的事件才被视为**软件中断**。
 
 * **错误代码有效**(Error Code Valid) - `bit 11`。如果**guest异常**push了**错误代码**，则设置为1；否则，清零。
 * **有效**(Valid) - `bit 31`。如果guest试图通过**IDT delivery异常时！！！** 发生拦截，则设置为1；否则，设置为1。 否则清零。
@@ -17,6 +17,6 @@
 
 # 示例
 
-例子: guest在delivery`#NP`的**过程中**引发`#GP`（根据x86规则, 解析为`#DF`的情况）, 并且在尝试delivery`#DF`的过程中发生了`#PF`的interception。 截获`#PF`时，EXITINTINFO表示`#PF`发生时，访客正在传递`#DF`。 有关截取的页面错误本身的信息在EXITCODE，EXITINFO1和EXITINFO2字段中进行编码。 
+例子: guest在delivery`#NP`的**过程中**引发`#GP`（根据x86规则, 解析为`#DF`的情况）, 并且在尝试delivery`#DF`的过程中发生了`#PF`的interception。 截获`#PF`时，EXITINTINFO(存有`#DF`信息)表示`#PF`发生时，访客正在传递`#DF`。 有关截取的页面错误`#PF`本身的信息在`EXITCODE`、`EXITINFO1`和`EXITINFO2`字段中进行编码。 
 
-如果VMM决定修复并取消`#PF`，则可以通过重新注入（请参见第15.20节）**EXITINTINFO**中记录的故障来恢复guest执行。 如果VMM决定应将#PF反映回guest，则它必须根据x86规则将EXITINTINFO中的事件与拦截的异常结合起来。 在这种情况下，＃DF加#PF会导致三重故障或停机。
+如果VMM决定修复并取消`#PF`，则可以通过**重新注入**（请参见第15.20节）**EXITINTINFO**中记录的故障来**恢复guest执行**。 如果VMM决定应将`#PF`反映回guest，则它必须根据x86规则将**EXITINTINFO**中的事件与拦截的异常结合起来。 在这种情况下，`#DF`加`#PF`会导致三重故障或停机。
