--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
@@ -1,5 +1,7 @@
 
-当guest中delivery异常或中断时，处理器检查**异常拦截**，并在异常delivery期间**发生拦截**的情况下更新**EXITINTINFO**的值。 以下伪代码概述了处理器如何传递事件（异常或中断）E。
+当guest中delivery异常或中断时，处理器会检查**异常拦截**，并在异常delivery期间**发生拦截**的情况下更新**EXITINTINFO**的值。 
+
+以下伪代码概述了处理器如何传递事件（异常或中断）E。
 
 ```cpp
 if E is an exception and is intercepted: 
