--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
@@ -1,7 +1,7 @@
 
 当guest中delivery异常或中断时，处理器会检查**异常拦截**，并在异常delivery期间**发生拦截**的情况下更新**EXITINTINFO**的值。 
 
-以下伪代码概述了处理器如何delivery事件（异常或中断）E。
+以下伪代码概述了处理器如何delivery事件（异常或中断）`E`。
 
 ```cpp
 if E is an exception and is intercepted: 
@@ -12,6 +12,7 @@ if (result was #DF and #DF is intercepted):
     #VMEXIT(#DF)
 if (result was shutdown and shutdown is intercepted): 
     #VMEXIT(#shutdown)
+// 记录guest正在delivery的事件
 EXITINTINFO = E // Record the event the guest is delivering.
 
 Attempt delivery of E through the IDT
