--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/8. 解码辅助/2. INTn 拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/8. 解码辅助/2. INTn 拦截.md
@@ -3,6 +3,19 @@ INTn Intercepts
 
 EXITINFO1记录INT n指令的中断号的立即值。
 
-![2020-09-17-23-11-21.png](./images/2020-09-17-23-11-21.png)
-
-![2020-09-17-23-11-32.png](./images/2020-09-17-23-11-32.png)
+<table>
+    <tr>
+        <th>Bit offsets</th>
+        <th>域内容</th>
+    </tr>
+    <tr>
+        <td>7:0</td>
+        <td>
+            软件中断号
+        </td>
+    </tr>
+    <tr>
+        <td>63:8</td>
+        <td>0</td>
+    </tr>
+</table>
