--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/8. 解码辅助/3. INVLPG和INVLPGA拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/8. 解码辅助/3. INVLPG和INVLPGA拦截.md
@@ -5,4 +5,15 @@ INVLPG and INVLPGA Intercepts
 
 对于INVLPGA拦截，线性地址可直接从guest rAX寄存器获得，而EXITINFO1中未提供。
 
-![2020-09-17-23-13-51.png](./images/2020-09-17-23-13-51.png)
+<table>
+    <tr>
+        <th>Bit Offsets</th>
+        <th>域内容</th>
+    </tr>
+    <tr>
+        <td>63:0</td>
+        <td>
+            线性地址
+        </td>
+    </tr>
+</table>
