--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -23,19 +23,19 @@
 
 ② 由**软件主动引发的异常**
 
-③ **Machine\-Check(机器检查)引发的异常**
+③ `Machine-Check`(**机器检查**)引发的异常
 
 异常是**不能被屏蔽的**, 无论是执行错误还是主动引发异常, 实质上是在**处理器内部引发**.
 
-异常包括硬件异常和软件异常.
+异常又分为**硬件异常**和**软件异常**.
 
-* 一般, 硬件异常是指**除了**`#BP`(**INT3指令**)与`#OF`异常(**INTO指令**)以外的**所有异常**
+* 一般, 硬件异常是指除了`#BP`(**INT3指令**)与`#OF`异常(**INTO指令**)以外的**所有异常**
 
 它们属于**fault或abort类型异常**. 也包括由**BOUND指令**产生的`#BR`异常及由**UD指令**产生的`#UD`异常. 所有类型的`#DB异常`(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
 
 能**产生错误码**的**硬件异常**是: `#DF`, `#TS`, `#NP`, `#SS`, `#GP`, `#PF`及`#AC`这7类.
 
-* **软件异常**指由**NIT3与INTO指令**产生的`#BP`与`#OF`异常.
+* **软件异常**指由 **INT3** 与 **INTO指令** 产生的`#BP`与`#OF`异常.
 
 这部分聊的是异常, 不是中断, 也不是其他错误, 关于异常和中断, 可以看体系结构部分知识
 
@@ -50,12 +50,11 @@
 如果**这个异常不直接！！！** 导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的**delivery期间**遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而**间接导致**`VM-exit`。
 
 注: 
-
-* 原始异常对应的exception bitmap没有置位所以不会 VM-exit, 这个异常会进行正常delivery; 
-* 而另一个错误(**不一定是异常！！！**)本身会导致VM-exit, 比如下面等等(见3.10.3).
-  * exception bitmap对应位置位的异常导致VM-exit, 如果这个异常的exception bitmap对应位没有置位则不会VM-exit
-  * EPT misconfiguration, 会发生VM-exit
-  * Task switch, 任务切换必定会VM-exit.
+* 原始异常对应的exception bitmap没有置位所以不会 `VM-exit`, 这个异常会进行**正常delivery**; 
+* 而另一个错误(**不一定是异常！！！**)本身会导致`VM-exit`, 比如下面等等(见3.10.3).
+  * exception bitmap对应位置位的异常导致`VM-exit`, 如果这个异常的exception bitmap对应位没有置位则不会`VM-exit`
+  * EPT misconfiguration, 会发生`VM-exit`
+  * Task switch, 任务切换必定会`VM-exit`.
 
 # 3. VMM异常处理
 
