--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. APIC虚拟化和虚拟中断/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. APIC虚拟化和虚拟中断/0. 概述.md
@@ -1,6 +1,15 @@
+VMCS包括一些**控制信息**, 能实现
+* 中断的虚拟化
+* 高级可编程中断控制器（APIC）的虚拟化
 
+使用这些**控制信息**时，处理器可以
+* 模拟对APIC的多次访问，
+* 跟踪**虚拟APIC的状态**，
+* deliver虚拟中断
 
+上面所有这些操作都是在**VMX非根模式**下完成的，而没有`VM exit`。
 
+注: 在大多数情况下，VMM**不需要注入虚拟中断**作为`VM entry`的一部分。
 
 处理器使用由VMM标识的`virtual APIC page`(**虚拟APIC页面**)跟踪**虚拟APIC的状态**。 `第29.1节`讨论了`virtual APIC page`以及处理器如何使用它来跟踪虚拟APIC的状态。
 
