--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -21,15 +21,13 @@
 
 guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 APIC- access page 页面的地址是 guest-physical address。包括下面的几种情况。
 
- (1) 处理器在转换 guest-linear address I 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 GPA 转换后的 HPA 地址值落在了 APIC- access page 页面内，也就是处理器在各级 guest paging structure 进行 walk 流程时遇到 GPA 访问了 APIC- access page 页面。
+ (1) 处理器在转换 guest-linear address I 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 GPA 转换后的 HPA 地址值落在了 APIC-access page 页面内，也就是处理器在各级 guest paging structure 进行 walk 流程时遇到 GPA 访问了 APIC-access page 页面。
 
- (2) 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-to-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的 GPA 转换后的 HPA 地址值落在了 APIC- access page 页面内。
+ (2) 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-to-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的 GPA 转换后的 HPA 地址值落在了 APIC-access page 页面内。
 
- (3) 当更新 guest paging structure 表项内的 diry 或者 accessed 标志位时（这时使用
+ (3) 当更新 guest paging structure 表项内的 diry 或者 accessed 标志位时（这时使用GPA 地址访问），表项地址转换后的 HPA 落在了 APIC-access page 页面内。
 
-GPA 地址访问），表项地址转换后的 HPA 落在了 APIC- access page 页面内。
-
-在这种情况下，发起 guest- physical 访问 APIC- access page 页面不需要经过 guest-  linear address。也就是：guest-physical address 并不是由 guest- linear address 转换而来
+在这种情况下，发起 guest-physical 访问 APIC-access page 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来
 
 3. Physical access（物理访问）
 
