--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -37,13 +37,9 @@ guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 AP
 
 当“enable EPT”位为 0 时（关闭 EPT 机制）:
 
-在处理器转换线性地址时（进行 wak 流程），由于 paging structure 表项里的物
+在处理器转换线性地址时（进行 walk 流程），由于 paging structure 表项里的物理地址落在了 APIC-access page 页面内。
 
-理地址落在了 APIC- access page 页面内。
-
-在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了
-
-加载 PDPTES 表项，CR3 寄存器内的物理地址落在了 APIC- access page 页面
+在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面
 
 在更新 paging structure 表项的 diry 或者 accessed 标志位时，表项地址落在了 APIC- access page 页面内
 
