--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -1,11 +1,11 @@
 
-当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。`APIC-access page` 的 **64 位物理地址**由 VMM 提供在 `APIC-access address` 字段里（参见 3.5.9 节）。
+当`“virtualize APICaccesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。`APIC-access page` 的 **64 位物理地址**由 VMM 提供在 `APIC-access address` 字段里（参见 3.5.9 节）。
 
 注: local APIC的寄存器一共占据4K空间
 
-由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
+由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linearaccess（线性访问）、guest-physicalaccess（客户端物理访问）以及 physicalaccess（物理访问）
 
-1. linear access（线性访问）
+1. linearaccess（线性访问）
 
 线性访问是指下面两种途径:
 
@@ -17,19 +17,19 @@
 
 这两种情况下，对 APIC-access page 页面的访问发起源都是线性地址。也就是：访问的最终物理地址是由线性地址转换而来。
 
-2. guest-physical access（客户端物理访问）
+2. guest-physicalaccess（客户端物理访问）
 
-guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 APIC- access page 页面的地址是 guest-physical address。包括下面的几种情况。
+guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 APIC-access page 页面的地址是 guest-physical address。包括下面的几种情况。
 
  (1) 处理器在转换 guest-linear address 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 **GPA 转换后的 HPA** 地址值落在了 APIC-access page 页面内，也就是处理器在各级 **guest paging structure** 进行 walk 流程时遇到 GPA 访问了 APIC-access page 页面。
 
  (2) 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-to-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的 GPA 转换后的 HPA 地址值落在了 APIC-access page 页面内。
 
- (3) 当更新 **guest paging structure 表项**内的 dirty 或者 accessed 标志位时（这时使用 **GPA** 地址访问），表项地址转换后的 HPA 落在了 APIC-access page 页面内。
+ (3) 当更新 **guest paging structure 表项**内的 dirty 或者accessed 标志位时（这时使用 **GPA** 地址访问），表项地址转换后的 HPA 落在了 APIC-access page 页面内。
 
 在这种情况下，发起 guest-physical 访问 APIC-access page 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来
 
-3. Physical access（物理访问）
+3. Physicalaccess（物理访问）
 
 物理访问是以**物理地址**作为发起源来访问 APIC-access page 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
 
@@ -38,26 +38,24 @@ guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 AP
 * 当“enable EPT”位为 0 时（关闭 EPT 机制）:
     * 在处理器转换线性地址时（进行 walk 流程），由于 paging structure 表项里的物理地址落在了 APIC-access page 页面内。
     * 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面
-    * 在更新 paging structure 表项的 dirty 或者 accessed 标志位时，表项地址落在了 APIC- access page 页面内
+    * 在更新 paging structure 表项的 dirty 或者accessed 标志位时，表项地址落在了 APIC-access page 页面内
 
 * 当“enable EPT“位为 1 时（启用 EPT 机制）:
     * 在处理器转换 `guest-physical address` 时，由于 `EPT paging structure` 表项里的物理地址落在了 APIC-access page 页面内。
-    * 在**更新 EPT paging structure 表项**的 dirty 或者 accessed 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
+    * 在**更新 EPT paging structure 表项**的 dirty 或者accessed 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
 
 * 访问的 VMCS 区域落在了 APIC-access page 页面内。从另一个角度看，也就是 VMCS 区城的物理地址为 APIC-access page 地址。
 * 访问 VMCS 区城内**所引用的数据区域**的物理地址落在了 APIC-access page 页面内。包括 `I/O bitmap`、`MSR bitmap` 以及 `virtual-apic page` 区域。
 * 在发生 SMM 模式的切换时（进入或者退出 SMM）访问了 APIC-access page 页面发生。包括下面的情况（注意：实际上这不可能发生在 VMX non- root operation 模式内。）:
+    * 在默认 SMM 处理下，从 SMI 的 delivery 到执行 RSM 指令期间访问的  SMRAN 落在 APIC-access page 页面内。
+    * 在 SMM 双重监控处理下，从产生 SMM Vm-exit 到 Vm-entry that return from SMM 期间访问了 APIC-access page 页面（如 MSEG 区域）
 
-在默认 SMM 处理下，从 SMI 的 delivery 到执行 RSM 指令期间访问的  SMRAN 落在 APIC-access page 页面内。
+在物理访问里，发起访问 `APIC-access page` 页面的物理地址，不是由线性地址或者  guest-physical address 转换而来。取决于 "use TPR shadow"、“APIC-register virtualization" 以及“virtual-interrupt delivery 位的设置，guest 访问 APC-access page 页面可以产生 VM-exit，成功访问 virtual- APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
 
-在 SMM 双重监控处理下，从产生 SMM Vm-exit 到 Vm-entry that return from SMM 期间访问了 APIC-access page 页面（如 MSEG 区域）
+# APIC-access page 的设置
 
-在物理访问里，发起访问 APIC- access page 页面的物理地址，不是由线性地址或者  guest- physical address 转换而来。取决于 use TPR shadow、“Apic-register virtualization 以及“virtual- -interrupt delivery 位的设置，guest 访问 APC- access page 页面可以产生 VM-exit，成功访问 virtual- APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
+引入 APIC-access page，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 EPT violation 或者 MSR bitmap 实现）
 
-7.2.3.1APIC- access page 的设置
-
-引入 APIC access page，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由处理器自动实施（并非通过 EPT violation 或者 MSR bitmap 实现）
-
-显然，我们需要将 APIC- access page 页面的物理地址设置为 APIC-page 的物理地址当 guest 尝试线性访问 local APIC 时，会落入 APC- access page 页面内。
+显然，我们需要将 APIC-access page 页面的物理地址设置为 APIC-page 的物理地址当 guest 尝试线性访问 local APIC 时，会落入 APC-access page 页面内。
 
 当“enable EPT“为 0 时（关闭 EPT 机制）, VMM 将 guest 写人 A32APIC_BASE
