--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -56,6 +56,6 @@ guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 AP
 
 引入 APIC-access page，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 EPT violation 或者 MSR bitmap 实现）
 
-显然，我们需要将 APIC-access page 页面的物理地址设置为 APIC-page 的物理地址当 guest 尝试线性访问 local APIC 时，会落入 APC-access page 页面内。
+显然，我们需要将 `APIC-access page` 页面的**物理地址**设置为 `APIC-page` 的物理地址. 当 guest 尝试线性访问 local APIC 时，会落入 APC-access page 页面内。
 
-当“enable EPT“为 0 时（关闭 EPT 机制）, VMM 将 guest 写人 A32APIC_BASE
+当“enable EPT“为 0 时（关闭 EPT 机制）, VMM 将 guest 写人 `IA32_APIC_BASE` 寄存器的
