--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -85,3 +85,10 @@ void DoWriteMsrForApicBase()
 
 ```
 
+在上面的 DoWriteMsrForApicBase 例程片段里，当检查到 VMCS 里设置了  "virtualize APIC accesses" 位之后，则对 APIC-access page 页面进行设置.
+
+在 `lib\Vmx\VmxInit.asm` 文件的 int vm execution control fields 函数初始化期间，默认的 APC- access page 页面物理地址设置为 OFEEO 这里保持了一致，将 guest 尝试写入 1A32 APIC BASE 寄存器的基址映射到 OFEEO00 地址上。
+
+1. 设置 guest I 默认 A32APIC_BASE
+
+由于 host 可能会更改 1A32 APIC BASE 寄存器的值，为了保持 guest 环境在 REST 后的状态，需要在 Init guest a 和 init guest b 函数里，将 guest 默认的 A32APIC_BASE 值设置为 OFEEO09OH
