--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -82,13 +82,70 @@ void DoWriteMsrForApicBase()
 当启用了"virtualize APIC accesses" 功能时, 需要设置相应的 APIC access address 字段值. 否则, 利用 EPT violation 来达到虚拟化 local APIC的目的(参加`7.2.1.1`的例子 `7-3`).
 
 ```x86asm
+        ;;
+        ;; 1）检查是否开启了“virtualize APIC access ”
+        ;;     a) 是，则设置 APIC-access page 页面
+        ;;     b) 否，则提供 GPA 例程处理 local APIC 访问
+        ;; 2）检查是否开启了“enable EPT”
+        ;;     a）是，则映射 IA32_APIC_BASE[N-1:12]，将 APIC-access page 设置为该 HPA 值
+        ;;     b）否，则直接将 IA32_APIC_BASE[N-1:12] 设为 APIC-access page
+        ;;
+        
+        GetVmcsField    CONTROL_PROCBASED_SECONDARY
+        
+        test eax, VIRTUALIZE_APIC_ACCESS
+        jz DoWriteMsrForApicBase.SetForEptViolation        
+        test eax, ENABLE_EPT
+        jz DoWriteMsrForApicBase.EptDisable
+        
+        ;;
+        ;; 执行 EPT 映射到 0FEE00000H
+        ;;
+%ifdef __X64        
+        REX.Wrxb
+        mov esi, [edx + MSR_VTE.Value]
+        mov edi, 0FEE00000h
+        mov eax, EPT_READ | EPT_WRITE
+        call do_guest_physical_address_mapping
+%else
+        mov esi, [edx + MSR_VTE.Value]
+        mov edi, [edx + MSR_VTE.Value + 4]
+        mov eax, 0FEE00000H
+        mov edx, 0
+        mov ecx, EPT_READ | EPT_WRITE
+        call do_guest_physical_address_mapping
+%endif
 
+        mov eax, 0FEE00000h
+        mov edx, 0
+        jmp DoWriteMsrForApicBase.SetApicAccessPage
+
+
+DoWriteMsrForApicBase.EptDisable:
+        REX.Wrxb
+        mov eax, [edx + MSR_VTE.Value]
+        mov edx, [edx + MSR_VTE.Value + 4]
+        REX.Wrxb
+        and eax, ~0FFFh
+        
+DoWriteMsrForApicBase.SetApicAccessPage:        
+        SetVmcsField    CONTROL_APIC_ACCESS_ADDRESS_FULL, eax
+%ifndef __X64
+        SetVmcsField    CONTROL_APIC_ACCESS_ADDRESS_HIGH, edx
+%endif        
+        
+        call update_guest_rip
+        jmp DoWriteMsrForApicBase.Done
 ```
 
 在上面的 DoWriteMsrForApicBase 例程片段里，当检查到 VMCS 里设置了  "virtualize APIC accesses" 位之后，则对 APIC-access page 页面进行设置.
 
-在 `lib\Vmx\VmxInit.asm` 文件的 int vm execution control fields 函数初始化期间，默认的 APC- access page 页面物理地址设置为 OFEEO 这里保持了一致，将 guest 尝试写入 1A32 APIC BASE 寄存器的基址映射到 OFEEO00 地址上。
+在 `lib\Vmx\VmxInit.asm` 文件的 `int_vm_execution_control_fields` 函数初始化期间，默认的 `APC-access page` 页面物理地址设置为 0FEE00000H. 这里保持了一致，将 guest 尝试写入 `IA32_APIC_BASE` 寄存器的基址映射到 0FEE00000H 地址上。
 
-1. 设置 guest I 默认 A32APIC_BASE
+1. 设置 guest  默认 IA32_APIC_BASE
 
-由于 host 可能会更改 1A32 APIC BASE 寄存器的值，为了保持 guest 环境在 REST 后的状态，需要在 Init guest a 和 init guest b 函数里，将 guest 默认的 A32APIC_BASE 值设置为 OFEEO09OH
+由于 host 可能会更改 IA32_APIC_BASE 寄存器的值，为了保持 guest 环境在 #REST 后的状态，需要在 init_guest_a 和 init_guest_b 函数里，将 guest 默认的 `IA32_APIC_BASE` 值设置为 0FEE00900H.
+
+```x86asm
+
+```
