--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -147,5 +147,65 @@ DoWriteMsrForApicBase.SetApicAccessPage:
 由于 host 可能会更改 IA32_APIC_BASE 寄存器的值，为了保持 guest 环境在 #REST 后的状态，需要在 init_guest_a 和 init_guest_b 函数里，将 guest 默认的 `IA32_APIC_BASE` 值设置为 0FEE00900H.
 
 ```x86asm
-
+        ;;
+        ;; 配置 guest 的初始 IA32_APIC_BASE 寄存器值
+        ;;
+        mov esi, IA32_APIC_BASE
+        mov eax, 0FEE00000h | APIC_BASE_BSP | APIC_BASE_ENABLE
+        xor edx, edx
+        call append_vmentry_msr_load_entry
 ```
+
+通过在 VM-entry MSR-load 列表里增加 IA32_APIC_BASE 寄存器数据, 来设置 guest 的 MSR 初始化值.
+
+2. 恢复 host 的 IA32_APIC_BASE
+
+当 guest 修改 IA32_APIC_BASE 寄存器值时, 为了保持 host 环境正确, 需要在 VM-exit 时恢复host原来的 IA32_APIC_BASE 寄存器值.
+
+```x86asm
+        ;;
+        ;; 保存当前的 IA32_APIC_BASE 值作为 VM-exit 时加载
+        ;;
+        mov ecx, IA32_APIC_BASE
+        rdmsr
+        mov esi, IA32_APIC_BASE
+        call append_vmexit_msr_load_entry
+```
+
+通过在 VM-exit MSR-load 列表里增加 1A32 APIC BASE 寄存器数据来恢复 host 原
+
+监控了 guest 尝试更改 A32APIC_BASE 寄存器的操作。实际
+
+上，1A32APIC_BASE 寄存器并没有被修改过。在这种情况下，恢复 host 的
+
+A32APIC_BASE 寄存器操作不是必需的！
+
+7.2.4 拟化 x2 APIC MSR 组
+
+在 x2APIC 模式里，local APIC 寄存器被映射到 MSR 地址空间从 800H 到 8FFH 的区域。软件通过 RDMSR 与 WRMSR 指令读写 MSR 寄存器来访问 local APIC 寄存器。
+
+VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
+
+ (1) 当“virtualize x2 APIC mode 位为 0 时，通过设置 MSR bitmap 来监控 guest 访
+
+问 local APIC，从而达到虚拟化 local APIC
+
+ (2) 当“virtualize x2 APIC mode”位为 1 时，使用 VMX 提供的原生（native）虚拟
+
+化 x2APIC 模式 local APIC。处理器将拟化 guest 基于 MSR 访问 local APIC 寄存器。
+
+当虚拟化 x2APIC 模式 local APIC 时，不存在 APIC- access page 页面！APIC-acs
+
+page 页仅存在于使用 VMX 原生的（native）基于内存映射访问 local APIC 的虚拟化中。
+
+注意：“virtualize APIC- accesses“与 virtualize x2 APIC mode“位不能同时设为 1 值。也
+
+就是 local APIC 不能同时使用 KAPIC 与 x2APIC 两种模式
+
+1. 监控 guest 访问 local APIC MSR
+
+在前面的例子 7-3 里，我们学习了如何利用 EPT violation 故障来监控 guest 1 访问 local
+
+APIC 页面。当“virtualize x2 APIC mode“位为 0 时，我们也利用 MSR bitmap 来监控
+
+ guest 1 访 local APIC MSR
