--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -172,7 +172,7 @@ DoWriteMsrForApicBase.SetApicAccessPage:
         call append_vmexit_msr_load_entry
 ```
 
-通过在 VM-exit MSR-load 列表里增加 1A32 APIC BASE 寄存器数据来恢复 host 原
+通过在 VM-exit MSR-load 列表里增加 IA32_APIC_BASE 寄存器数据来恢复 host 原
 
 监控了 guest 尝试更改 A32APIC_BASE 寄存器的操作。实际
 
