--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -156,7 +156,7 @@ DoWriteMsrForApicBase.SetApicAccessPage:
         call append_vmentry_msr_load_entry
 ```
 
-通过在 VM-entry MSR-load 列表里增加 IA32_APIC_BASE 寄存器数据, 来设置 guest 的 MSR 初始化值.
+通过在 VM-entry MSR-load 列表里增加 `IA32_APIC_BASE` 寄存器数据, 来设置 guest 的 MSR 初始化值.
 
 2. 恢复 host 的 IA32_APIC_BASE
 
@@ -172,9 +172,5 @@ DoWriteMsrForApicBase.SetApicAccessPage:
         call append_vmexit_msr_load_entry
 ```
 
-通过在 VM-exit MSR-load 列表里增加 IA32_APIC_BASE 寄存器数据来恢复 host 原值. 然而, 由于 VMM 监控了 guest 尝试更改 A32APIC_BASE 寄存器的操作。实际
-
-上，1A32APIC_BASE 寄存器并没有被修改过。在这种情况下，恢复 host 的
-
-A32APIC_BASE 寄存器操作不是必需的！
+通过在 VM-exit MSR-load 列表里增加 `IA32_APIC_BASE` 寄存器数据来恢复 host 原值. 然而, 由于 VMM 监控了 guest 尝试更改 `IA32_APIC_BASE` 寄存器的操作。实际上，1A32APIC_BASE 寄存器并没有被修改过。在这种情况下，恢复 host  IA32_APIC_BASE 寄存器操作不是必需的！
 
