--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/4. 虚拟化x2APIC MSR组.md
@@ -5,20 +5,26 @@
 
 VMM 可以通过下面两种方式来虚拟化 x2APIC 模式的 local APIC:
 
- (1) 当"`virtualize x2 APIC mode`" 位为 0 时，通过设置 **MSR bitmap** 来监控 guest 访问 local APIC，从而达到虚拟化 local APIC
+ (1) 当"`virtualize x2APIC mode`" 位为 **0** 时，通过设置 **MSR bitmap** 来监控 guest 访问 local APIC，从而达到虚拟化 local APIC
 
- (2) 当“`virtualize x2 APIC mode`”位为 1 时，使用 VMX 提供的原生(native)虚拟化 x2APIC 模式 local APIC。处理器将拟化 guest 基于 MSR 访问 local APIC 寄存器。
+ (2) 当“`virtualize x2APIC mode`”位为 **1** 时，使用 VMX 提供的原生(native)虚拟化 **x2APIC** 模式 local APIC。处理器将拟化 guest 基于 **MSR** 访问 local APIC 寄存器。
 
 当虚拟化 x2APIC 模式 local APIC 时，**不存在 APIC- access page 页面！** `APIC-access page` 页仅存在于使用 VMX 原生的（native）基于**内存映射**访问 local APIC 的虚拟化中。
 
->注意：“virtualize APIC-accesses“与 virtualize x2 APIC mode“位不能同时设为 1 值。也就是 local APIC 不能同时使用 xAPIC 与 x2APIC 两种模式
+>注意：“virtualize APIC-accesses"与 "virtualize x2APIC mode" 位不能同时设为 1 值。也就是 local APIC 不能同时使用 xAPIC 与 x2APIC 两种模式
 
 1. 监控 guest 访问 local APIC MSR
 
-在前面的例子 7-3 里，我们学习了如何利用 EPT violation 故障来监控 guest 访问 local
+在前面的例子 7-3 里，我们学习了如何利用 EPT violation 故障来监控 guest 访问 local APIC 页面。当 "virtualize x2APIC mode" 位为 0 时，我们也利用 **MSR bitmap** 来监控 guest 访问 local APIC MSR
 
-APIC 页面。当“virtualize x2 APIC mode“位为 0 时，我们也利用 MSR bitmap 来监控
+```x86asm
 
-guest 1 访 local APIC MSR
+```
 
- 
+上面的代码片段出现在前面介绍过的 Do Writemsrforapic Base 例程里。它检查  virtualize x2APIC mode”位是否为 1, 为 0 时调用 set msr read bitmap for x2apic 与  set msr write_ bitmap for x2apic 函数设置 local APIC MSR 对应的读/写 MSR bitmap（参见 3.5.15 节）
+
+2. 处理访问 local APIC MSR
+
+当 guest 使用 RDMSR 与 WRMSR 指令访问 local APIC MSR 时，由于我们已经在  MSR bitmap 里设置了拦截功能而产生 Vm-exit。VMM 应该根据 local APIC 的虚似化操作流程来处理这个 VM-exit（参见下面的 72.7 与 72.8 节）。
+
+这里没有实现例子完成处理访问 local APIC MSR，这个工作留待读者自行完成。
