--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -3,35 +3,33 @@
 
 注: local APIC的寄存器一共占据4K空间
 
-由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linearaccess（线性访问）、guest-physicalaccess（客户端物理访问）以及 physicalaccess（物理访问）
+由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
 
-1. linearaccess（线性访问）
+1. linear access（线性访问）
 
 线性访问是指下面两种途径:
 
-）当“enable EPT”为 0 时，guest 尝试使用线性地址访问，这个线性地址经过
+(1) 当“enable EPT”为 0 时，guest 尝试使用线性地址访问，这个线性地址经过 `paging-structure` 转换后的物理地址落在 APC-access page 页面内。
 
- `paging-structure` 转换后的物理地址落在 APC-access page 页面内。
+(2) 当“enable EPT”为 1 时，guest-linear address 经过 guest paging structure 以及  EPT paging structure 转换的最终 host-physical address 落在 APC-access page 页面内。
 
- (2) 当“enable EPT”为 1 时，guest-linear address 经过 guest paging structure 以及  EPT paging structure 转换的最终 host-physical address？落在 APC-access page 页面内。
+这两种情况下，对 `APIC-access page` 页面的访问发起源都是线性地址。也就是：访问的**最终物理地址**是由**线性地址转换**而来。
 
-这两种情况下，对 APIC-access page 页面的访问发起源都是线性地址。也就是：访问的最终物理地址是由线性地址转换而来。
+2. guest-physical access（客户机物理地址访问）
 
-2. guest-physicalaccess（客户端物理访问）
+guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问** `APIC-access page` 页面的地址是 `guest-physical address`(**虚拟机物理地址**)。包括下面的几种情况。
 
-guest-physical 访问是在启用 EPT 机制的情况下，guest 发起访问 APIC-access page 页面的地址是 guest-physical address。包括下面的几种情况。
+(1) 处理器在转换 guest-linear address 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 **GPA 转换后的 HPA** 地址值落在了 `APIC-access page` 页面内，也就是处理器在各级 guest paging structure 进行 **walk 流程**时遇到 GPA 访问了 `APIC-access page` 页面。
 
- (1) 处理器在转换 guest-linear address 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 **GPA 转换后的 HPA** 地址值落在了 APIC-access page 页面内，也就是处理器在各级 **guest paging structure** 进行 walk 流程时遇到 GPA 访问了 APIC-access page 页面。
+(2) 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-to-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的 **GPA 转换后的 HPA** 地址值落在了 `APIC-access page` 页面内。
 
- (2) 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-to-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的 GPA 转换后的 HPA 地址值落在了 APIC-access page 页面内。
+(3) 当更新 **guest paging structure 表项**内的 dirty 或者 accessed 标志位时(这时使用 **GPA** 地址访问)，表项地址转换后的 HPA 落在了 `APIC-access page` 页面内。
 
- (3) 当更新 **guest paging structure 表项**内的 dirty 或者accessed 标志位时（这时使用 **GPA** 地址访问），表项地址转换后的 HPA 落在了 APIC-access page 页面内。
+在这种情况下，发起 guest-physical 访问 `APIC-access page` 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来.
 
-在这种情况下，发起 guest-physical 访问 APIC-access page 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来
+3. Physical access（物理访问）
 
-3. Physicalaccess（物理访问）
-
-物理访问是以**物理地址**作为发起源来访问 APIC-access page 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
+物理访问是以**物理地址**作为发起源来访问 `APIC-access page` 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
 
 取决于 `secondary processor-based Vm-execution control` 字段 `enable EPT` 位的设置，下面的情况属于物理访问。
 
