--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -1,4 +1,6 @@
 
+# virtualize APIC accesses
+
 当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。`APIC-access page` 的 **64 位物理地址**由 VMM 提供在 `APIC-access address` 字段里（参见 3.5.9 节）。
 
 注: local APIC的寄存器一共占据4K空间
@@ -27,9 +29,9 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 在这种情况下，发起 guest-physical 访问 `APIC-access page` 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来.
 
-3. Physical access(物理地址访问)
+3. physical access(物理访问)
 
-物理访问是以**物理地址**作为发起源来访问 `APIC-access page` 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
+物理访问是以**物理地址**作为**发起源**来访问 `APIC-access page` 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
 
 取决于 `secondary processor-based Vm-execution control` 字段 `enable EPT` 位的设置，下面的情况属于物理访问。
 
@@ -44,11 +46,13 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 * 访问的 VMCS 区域落在了 APIC-access page 页面内。从另一个角度看，也就是 VMCS 区城的物理地址为 APIC-access page 地址。
 * 访问 VMCS 区城内**所引用的数据区域**的物理地址落在了 APIC-access page 页面内。包括 `I/O bitmap`、`MSR bitmap` 以及 `virtual-apic page` 区域。
-* 在发生 SMM 模式的切换时（进入或者退出 SMM）访问了 APIC-access page 页面发生。包括下面的情况（注意：实际上这不可能发生在 VMX non- root operation 模式内。）:
+* 在发生 SMM 模式的切换时（进入或者退出 SMM）访问了 APIC-access page 页面发生。包括下面的情况（注意：实际上这**不可能发生在 VMX non-root operation 模式内**。）:
     * 在默认 SMM 处理下，从 SMI 的 delivery 到执行 RSM 指令期间访问的  SMRAN 落在 APIC-access page 页面内。
     * 在 SMM 双重监控处理下，从产生 SMM Vm-exit 到 Vm-entry that return from SMM 期间访问了 APIC-access page 页面（如 MSEG 区域）
 
-在物理访问里，发起访问 `APIC-access page` 页面的物理地址，不是由线性地址或者  guest-physical address 转换而来。取决于 "use TPR shadow"、“APIC-register virtualization" 以及“virtual-interrupt delivery 位的设置，guest 访问 APC-access page 页面可以产生 VM-exit，成功访问 virtual- APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
+在物理访问里，发起访问 `APIC-access page` 页面的物理地址，**不是由线性地址或者  guest-physical address 转换**而来。
+
+取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 APC-access page 页面可以产生 VM-exit，成功访问 virtual-APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
 
 # APIC-access page 的设置
 
