--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -1,9 +1,15 @@
 
-# virtualize APIC accesses
+# virtualize APIC accesses机制
 
-当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。`APIC-access page` 的 **64 位物理地址**由 VMM 提供在 `APIC-access address` 字段里（参见 3.5.9 节）。
+当`“virtualize APIC accesses”`位为 1 时，虚拟化基于**内存映射**（memory mapped）的方式访问 local APIC 寄存器。
 
-注: local APIC的寄存器一共占据4K空间
+引入了一个被称为`“APIC-access page”`（APC 访问页面）的 **4K 页面**来对应物理的 **local APIC 页面**。
+
+`APIC-access page` 的 **64 位物理地址**由 VMM 提供在 `APIC-access address` 字段里（参见 3.5.9 节）。
+
+注: local APIC的寄存器一共占据4K空间, 所以为什么是一个 4K 页面
+
+# 对 APIC-access page 的访问
 
 由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
 
