--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -13,7 +13,7 @@
 
 由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
 
-1. linear access（线性访问）
+## linear access（线性访问）
 
 线性访问是指下面两种途径:
 
@@ -23,7 +23,7 @@
 
 这两种情况下，对 `APIC-access page` 页面的访问发起源都是线性地址。也就是：访问的**最终物理地址**是由**线性地址转换**而来。
 
-2. guest-physical access（虚拟机物理地址访问）
+## guest-physical access（虚拟机物理地址访问）
 
 guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问** `APIC-access page` 页面的地址是 `guest-physical address`(**虚拟机物理地址**)。包括下面的几种情况。
 
@@ -35,7 +35,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 在这种情况下，发起 guest-physical 访问 `APIC-access page` 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来.
 
-3. physical access(物理访问)
+## physical access(物理访问)
 
 物理访问是以**物理地址**作为**发起源**来访问 `APIC-access page` 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
 
@@ -58,13 +58,13 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 在物理访问里，发起访问 `APIC-access page` 页面的物理地址，**不是由线性地址或者  guest-physical address 转换**而来。
 
-取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 APC-access page 页面可以产生 VM-exit，成功访问 virtual-APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
+取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 `APC-access page` 页面可以产生 VM-exit，成功访问 virtual-APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
 
 # APIC-access page 的设置
 
 引入 APIC-access page，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 EPT violation 或者 MSR bitmap 实现）
 
-显然，我们需要将 `APIC-access page` 页面的**物理地址**设置为 `APIC-page` 的物理地址. 当 guest 尝试线性访问 local APIC 时，会落入 APC-access page 页面内。
+显然，我们需要将 `APIC-access page` 页面的**物理地址**设置为 `APIC-page` 的物理地址. 当 guest 尝试线性访问 local APIC 时，会落入 `APC-access page` 页面内。
 
 * 当“enable EPT“为 0 时（关闭 EPT 机制）, VMM 将 guest 写人 `IA32_APIC_BASE` 寄存器的 local APIC 基址写入 `APIC-access address` 字段里.
 * 当“enable EPT”为 1 时（启用 EPT 机制）, VMM 需要将 guest 写人 `IA32_APIC_BASE` 寄存器的 local APIC 基址（**GPA**）转换后的 `host-physical address`(**HPA**) 写到 `APIC-access address` 字段里。
