--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -66,8 +66,8 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 显然，我们需要将 `APIC-access page` 页面的**物理地址**设置为 `APIC-page` 的物理地址. 当 guest 尝试线性访问 local APIC 时，会落入 `APC-access page` 页面内。
 
-* 当“enable EPT“为 0 时（关闭 EPT 机制）, VMM 将 guest 写人 `IA32_APIC_BASE` 寄存器的 local APIC 基址写入 `APIC-access address` 字段里.
-* 当“enable EPT”为 1 时（启用 EPT 机制）, VMM 需要将 guest 写人 `IA32_APIC_BASE` 寄存器的 local APIC 基址（**GPA**）转换后的 `host-physical address`(**HPA**) 写到 `APIC-access address` 字段里。
+* 当“enable EPT“为 0 时（**关闭 EPT 机制**）, VMM 将 **guest 写入** `IA32_APIC_BASE` 寄存器的 local APIC 基址(**GPA！！！**) 写入 `APIC-access address` 字段里.
+* 当“enable EPT”为 1 时（**启用 EPT 机制**）, VMM 需要将 guest 写入 `IA32_APIC_BASE` 寄存器的 local APIC 基址（**GPA！！！**）转换后的 `host-physical address`(**HPA！！！**) 写到 `APIC-access address` 字段里。
 
 因此，取决于 `secondary processor-based VM-execution control` 字段“`virtualize APIC accesses`“位的设置，对监控 guest 尝试使用 WRMSR 指令写 `IA32_APIC_BASE` 奇存器有不同的处理。如下面 C 伪码所示
 
