--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -69,7 +69,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 * 当“enable EPT“为 0 时（**关闭 EPT 机制**）, VMM 将 **guest 写入** `IA32_APIC_BASE` 寄存器的 local APIC 基址(**GPA！！！**) 写入 `APIC-access address` 字段里.
 * 当“enable EPT”为 1 时（**启用 EPT 机制**）, VMM 需要将 guest 写入 `IA32_APIC_BASE` 寄存器的 local APIC 基址（**GPA！！！**）转换后的 `host-physical address`(**HPA！！！**) 写到 `APIC-access address` 字段里。
 
-因此，取决于 `secondary processor-based VM-execution control` 字段“`virtualize APIC accesses`“位的设置，对监控 guest 尝试使用 WRMSR 指令写 `IA32_APIC_BASE` 奇存器有不同的处理。如下面 C 伪码所示
+因此，取决于 `secondary processor-based VM-execution control` 字段“`virtualize APIC accesses`“位的设置，对监控 guest 尝试使用 WRMSR 指令写 `IA32_APIC_BASE` 寄存器有不同的处理。如下面 C 伪码所示
 
 ```cpp
 void DoWriteMsrForApicBase()
