--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -23,13 +23,15 @@
 
 # 1. 两种监控模式
 
-VMM通过**EPT映射机制**或者`MSR-bitmap`来限制guest访问local APIC, 其原理是监控guest访问local APIC的行为并做出相应处理。
+在**不引入任何lapic 虚拟化机制**情况下(`7.2.2`节), VMM通过**EPT映射机制**或者`MSR-bitmap`来限制guest访问local APIC, 其原理是监控guest访问local APIC的行为并做出相应处理。
 
 ## 1.1. 监控基于内存映射的local APIC访问: APIC-page
 
 当local APIC 使用 **xAPIC** 模式, **local APIC 寄存器**通过 `memory-mapped`(内存映射)方式映射在**物理空间**的**4K页面**上，我们可以称这个4K页面为`APIC-page`。
 
 `APIC-page`**物理基址**在`IA32_APIC_BASE`寄存器的`bits N-1:12`里提供(N=MAXPHYADDR)
+
+注: local APIC的寄存器一共占据4K空间, 这个 `APIC-page` 就是正常情况下的描述, 不是虚拟化情况下的.
 
 在这种情况下，VMM可以通过**EPT映射机制！！！** 来监控guest访问local APIC。
 
