--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -4,8 +4,8 @@
 <!-- code_chunk_output -->
 
 - [1. 两种监控模式](#1-两种监控模式)
-  - [1.1. 监控基于内存映射的local APIC访问: APIC-page](#11-监控基于内存映射的local-apic访问-apic-page)
-  - [1.2. 监控基于MSR的localAPIC访问: MSR空间](#12-监控基于msr的localapic访问-msr空间)
+  - [1.1. 监控基于内存映射的local APIC访问: EPT violation](#11-监控基于内存映射的local-apic访问-ept-violation)
+  - [1.2. 监控基于MSR的localAPIC访问: MSR bitmap](#12-监控基于msr的localapic访问-msr-bitmap)
 - [2. 例子: 使用EPT机制实现local APIC虚拟化](#2-例子-使用ept机制实现local-apic虚拟化)
   - [2.1. 监控guest访问IA32_APIC_BASE寄存器](#21-监控guest访问ia32_apic_base寄存器)
   - [2.2. 处理写IA32_APIC_BASE时产生的VM-exit](#22-处理写ia32_apic_base时产生的vm-exit)
@@ -25,7 +25,7 @@
 
 在**不引入任何lapic 虚拟化机制**情况下(`7.2.2`节), VMM通过**EPT映射机制**或者`MSR-bitmap`来限制guest访问local APIC, 其原理是监控guest访问local APIC的行为并做出相应处理。
 
-## 1.1. 监控基于内存映射的local APIC访问: APIC-page
+## 1.1. 监控基于内存映射的local APIC访问: EPT violation
 
 当local APIC 使用 **xAPIC** 模式, **local APIC 寄存器**通过 `memory-mapped`(内存映射)方式映射在**物理空间**的**4K页面**上，我们可以称这个4K页面为`APIC-page`。
 
@@ -33,9 +33,9 @@
 
 注: local APIC的寄存器一共占据4K空间, 这个 `APIC-page` 就是正常情况下的描述, 不是虚拟化情况下的.
 
-在这种情况下，VMM可以通过**EPT映射机制！！！** 来监控guest访问local APIC。
+在这种情况下，VMM可以通过**EPT映射机制！！！** (EPT violation)来监控guest访问local APIC。
 
-## 1.2. 监控基于MSR的localAPIC访问: MSR空间
+## 1.2. 监控基于MSR的localAPIC访问: MSR bitmap
 
 当local APIC 使用 **x2APIC** 模式(xAPIC 的扩展模式), local APIC 寄存器映射到**MSR空间！！！** 上，MSR地址范围为`800H ~ 8FFH`。guest 软件使用`RDMSR`指令读取local APIC寄存器. 使用 WRMSR 指令写入 local APIC 寄存器.
 
