--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. .md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. .md
@@ -6,7 +6,7 @@
 为了保护物理资源，VMM必须限制 guest 对**物理local APIC**的访问。
 
 VMM可以选择使用下面的手段来**限制访问local APIC**.
-- 通过**EPT映射机制**或者 **MSR-bitmap** 限制访问(没有virtual。
+- 通过**EPT映射机制**或者 **MSR-bitmap** 限制访问(没有`virtual-APIC`机制)。
 - 通过 **virtual-APIC** 机制进行虚拟化**处理local APIC访问**。
 
-`virtual-APIC`机制是**VMX**为**local APIC**而引进的**虚拟化内存机制**。guest 代码对local APIC进行访问实际上访问的是`virtual-APIC page`区域。
+`virtual-APIC`机制是**VMX**为**local APIC**而引进的**虚拟化内存机制**。guest 代码对local APIC进行访问实际上访问的是`virtual-APIC page`区域（无论是**MSR映射**还是**内存映射**）。
