--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -1,4 +1,17 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [virtualize APIC accesses机制](#virtualize-apic-accesses机制)
+- [对 APIC-access page 的访问](#对-apic-access-page-的访问)
+  - [linear access（线性访问）](#linear-access线性访问)
+  - [guest-physical access（虚拟机物理地址访问）](#guest-physical-access虚拟机物理地址访问)
+  - [physical access(物理访问)](#physical-access物理访问)
+- [APIC-access page 的设置](#apic-access-page-的设置)
+
+<!-- /code_chunk_output -->
+
 # virtualize APIC accesses机制
 
 **引入 APIC-access page**，目的是**监控 guest 访问 local APIC**（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
