--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -1,11 +1,11 @@
 
-当“use TPR shadow”为 1 时，引入了一个被称为“virtual- APIC page”的影子页面（shadow page）。这个影子页面与物理 APIC page 样是 4K 大小，是 local APIC 的虚拟页面。
+当“use TPR shadow”为 1 时，引入了一个被称为“`virtual-APIC page`”的**影子页面**(shadow page)。这个影子页面与物理 APIC page 样是 4K 大小，是 local APIC 的虚拟页面。
 
-当“APC- register virtualization”为 1 时，virtual- APIC page 页面内存在每个 local APIC 寄存器对应的一份影子数据（即虚拟 local APIC 寄存器）。当“APIC- -register virtualization”为 0 时，还细分有下面的情况：
+当“APC-register virtualization”为 1 时，virtual- APIC page 页面内存在每个 local APIC 寄存器对应的一份影子数据（即虚拟 local APIC 寄存器）。当“APIC- -register virtualization”为 0 时，还细分有下面的情况：
 
- virtual- interrupt delivery”为 0 时，只有偏移量为 80H 的 VTPR 寄存器
+virtual- interrupt delivery”为 0 时，只有偏移量为 80H 的 VTPR 寄存器
 
- (virtual-TPR）是有效的。其他位置的数据属于无效（不可访问）。
+(virtual-TPR）是有效的。其他位置的数据属于无效（不可访问）。
 
 “virtual-interrupt delivery”为 1 时，除了偏移量为 80H 的 VTPR 寄存器外，还有偏移量为 BOH 的 VEI 寄存器（virtual-EOI），以及偏移量为 300H 的 VICR 寄存器（virtual-ICR）的低 32 位可以进行写访问，但不能进行读访问！其他位置的数据属于无效（不可访问）。
 
