--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -8,9 +8,27 @@
 
 `virtual-APIC page` 页面的 64 位**物理地址**需要在 `virtual-APIC address` 字段里提供。这个 4K 的页面属于 VMCS 区城所引用的数据结构区域（例如 IO bitmap 与 MSR  bitmap), VMM 在初始化 VMCS 区域时需要为 VM 分配这样的一个 4K 页面。
 
-注意：无论是虚拟化 XAPC 模式还是 2APIC 模式，都会存在 virtual-APIC page 页面。
+注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面。
 
 1. 虚拟 local APC 寄存器
 
-virtual-APIC page 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了
+`virtual-APIC page` 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了可访问的虚拟 local APIC 寄存器.
+
+
+
+如前面所述，只有在“`APIC-register virtualization`”为 1 时，表中**所有的虚拟寄存器是可访问的**。
+
+“`APIC-register virtualization`”与“`virtual-interrupt delivery`”都为 **0** 时，只有 VTPR 是可访问的。“APIC- register virtualization”为 0 且 virtual- interrupt delivery
+
+为 1 时，只有 VTPR（读/), VEOI（只写）以及 VICR（偏移量 300H，只写）是可访
+
+问的。
+
+部分 local APIC 对应的虚拟寄存器是不可访问的，譬如偏移量为 AOH 的 VPPR  (virtual processor- priority register，虚拟处理器优先级别寄存器）。尝试访问则产生 VM-
+
+ext。
+
+APIC- access page 与 virtual- APIC page 的关系
+
+APIC- access page 与 virtual- APIC page 之间的关系类似于页映射中的虚拟地址与物理地址。当 guest 尝试线性访问 APIC- access page 页面时（不包括 guest- physical 访问与物理访问），实际上访问了 virtual- APIC page 页面的数据。如图 7-7 所示。
 
