--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -18,17 +18,16 @@
 
 如前面所述，只有在“`APIC-register virtualization`”为 1 时，表中**所有的虚拟寄存器是可访问的**。
 
-“`APIC-register virtualization`”与“`virtual-interrupt delivery`”都为 **0** 时，只有 VTPR 是可访问的。“APIC- register virtualization”为 0 且 virtual- interrupt delivery
+“`APIC-register virtualization`”与“`virtual-interrupt delivery`”都为 **0** 时，只有 **VTPR** 是**可访问**的。
 
-为 1 时，只有 VTPR（读/), VEOI（只写）以及 VICR（偏移量 300H，只写）是可访
+“`APIC-register virtualization`”为 **0** 且 "`virtual-interrupt delivery`"为 **1** 时，只有 **VTPR**(**读/写**), **VEOI**(**只写**)以及 **VICR**(偏移量 300H，**只写**)是可访问的。
 
-问的。
+部分 local APIC 对应的虚拟寄存器是**不可访问**的，譬如偏移量为 **AOH** 的 **VPPR**(`virtual processor-priority register`，**虚拟处理器优先级别寄存器**）。尝试访问则产生 VM-exit。
 
-部分 local APIC 对应的虚拟寄存器是不可访问的，譬如偏移量为 AOH 的 VPPR  (virtual processor- priority register，虚拟处理器优先级别寄存器）。尝试访问则产生 VM-
+2. APIC-access page 与 virtual-APIC page 的关系
 
-ext。
+`APIC-access page` 与 `virtual-APIC page` 之间的关系类似于**页映射**中的**虚拟地址**与**物理地址**。当 **guest** 尝试**线性**访问 `APIC-access page` 页面时（**不**包括 **guest-physical 访问**与**物理访问**），实际上访问了 `virtual-APIC page` 页面的数据。如图 7-7 所示。
 
-APIC- access page 与 virtual- APIC page 的关系
+![2021-01-03-13-49-02.png](./images/2021-01-03-13-49-02.png)
 
-APIC- access page 与 virtual- APIC page 之间的关系类似于页映射中的虚拟地址与物理地址。当 guest 尝试线性访问 APIC- access page 页面时（不包括 guest- physical 访问与物理访问），实际上访问了 virtual- APIC page 页面的数据。如图 7-7 所示。
-
+当启用了`virtual-APIC page`和
