--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -30,4 +30,4 @@
 
 ![2021-01-03-13-49-02.png](./images/2021-01-03-13-49-02.png)
 
-当启用了`virtual-APIC page`和
+当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 virtual-APIC page
