--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -3,16 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [virtualize APIC accesses机制](#virtualize-apic-accesses机制)
-- [对 APIC-access page 的访问](#对-apic-access-page-的访问)
-  - [linear access（线性访问）](#linear-access线性访问)
-  - [guest-physical access（虚拟机物理地址访问）](#guest-physical-access虚拟机物理地址访问)
-  - [physical access(物理访问)](#physical-access物理访问)
-- [APIC-access page 的设置](#apic-access-page-的设置)
+- [1. virtualize APIC accesses机制](#1-virtualize-apic-accesses机制)
+- [2. guest 对 APIC-access page 的访问](#2-guest-对-apic-access-page-的访问)
+  - [2.1. linear access（线性访问）](#21-linear-access线性访问)
+  - [2.2. guest-physical access（虚拟机物理地址访问）](#22-guest-physical-access虚拟机物理地址访问)
+  - [2.3. physical access(物理访问)](#23-physical-access物理访问)
+- [3. APIC-access page 的设置](#3-apic-access-page-的设置)
 
 <!-- /code_chunk_output -->
 
-# virtualize APIC accesses机制
+# 1. virtualize APIC accesses机制
 
 **引入 APIC-access page**，目的是**监控 guest 访问 local APIC**（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
 
@@ -24,11 +24,11 @@
 
 注: local APIC的寄存器一共占据4K空间, 所以为什么是一个 4K 页面
 
-# 对 APIC-access page 的访问
+# 2. guest 对 APIC-access page 的访问
 
 由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
 
-## linear access（线性访问）
+## 2.1. linear access（线性访问）
 
 线性访问是指下面两种途径:
 
@@ -38,7 +38,7 @@
 
 这两种情况下，对 `APIC-access page` 页面的访问发起源都是线性地址。也就是：访问的**最终物理地址**是由**线性地址转换**而来。
 
-## guest-physical access（虚拟机物理地址访问）
+## 2.2. guest-physical access（虚拟机物理地址访问）
 
 guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问** `APIC-access page` 页面的地址是 `guest-physical address`(**虚拟机物理地址**)。包括下面的几种情况。
 
@@ -50,7 +50,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 在这种情况下，发起 guest-physical 访问 `APIC-access page` 页面不需要经过 guest-linear address。也就是：`guest-physical address` 并**不是**由 `guest-linear address` 转换而来.
 
-## physical access(物理访问)
+## 2.3. physical access(物理访问)
 
 物理访问是以**物理地址**作为**发起源**来访问 `APIC-access page` 页面，包括 VMCS 区域内引用的物理区域（如 IO bitmap, MSR bitmap 等）。
 
@@ -75,7 +75,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 `APC-access page` 页面可以产生 VM-exit，成功访问 virtual-APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
 
-# APIC-access page 的设置
+# 3. APIC-access page 的设置
 
 **引入 APIC-access page**，目的是监控 guest 访问 local APIC（参见 7.2.1 节描述），但这个监控由**处理器自动实施**（并非通过 `EPT violation` 或者 `MSR bitmap` 实现）
 
