--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -32,11 +32,9 @@
 
 当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 virtual-APIC page 页面内的 VTPR 寄存器值.
 
-当 guest 尝试以 guest-physical 方式访问 APIC- access page 页面时，不能得到 virtual  APIC page 页面内的虚拟寄存器数据，而是产生 Vm-exit。以物理方式访间时可能会访问
+当 guest 尝试以 **guest-physical**(GPA) 方式访问 `APIC- access page` 页面时，**不能**得到 `virtual-APIC page` 页面内的虚拟寄存器数据，而是**产生 Vm-exit**。以物理方式(HPA)访间时可能会访问到, 也可能会产生 `VM-exit`.
 
-n△ WM it
-
-3. Local APIC MSR 与 irtual- APIC page 的关系
+3. Local APIC MSR 与 virtual- APIC page 的关系
 
 当使用 x2APIC 模式虚拟化机制时，guest 访问 local APIC MSR 同样访问到 virtual  APIC page 页面内的虚拟寄存器。如同图 7-7 所示，所不同的是通过 MSR 来访问 local APIC 物理页面。
 
