--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -32,36 +32,10 @@
 
 当启用了`virtual-APIC page`和`use TPR shadow`后, 如上图 7-7 所示guest尝试线性访问 TPR 寄存器, 处理器返回的是 virtual-APIC page 页面内的 VTPR 寄存器值.
 
-当 guest 尝试以 **guest-physical**(GPA) 方式访问 `APIC- access page` 页面时，**不能**得到 `virtual-APIC page` 页面内的虚拟寄存器数据，而是**产生 Vm-exit**。以物理方式(HPA)访间时可能会访问到, 也可能会产生 `VM-exit`.
+当 guest 尝试以 **guest-physical**(GPA) 方式访问 `APIC- access page` 页面时，**不能**得到 `virtual-APIC page` 页面内的虚拟寄存器数据，而是**产生 Vm-exit**。
 
-3. Local APIC MSR 与 virtual- APIC page 的关系
+以物理方式(HPA)访间时**可能会访问到**, 也可能会产生 `VM-exit`.
 
-当使用 x2APIC 模式虚拟化机制时，guest 访问 local APIC MSR 同样访问到 virtual  APIC page 页面内的虚拟寄存器。如同图 7-7 所示，所不同的是通过 MSR 来访问 local APIC 物理页面。
+3. Local APIC MSR 与 virtual-APIC page 的关系
 
- 7.2.6 Apic-access Vm-exit
-
-当“virtualize APIC accesses 为 1 时，guest 尝试进行下面的访问将产生 VM-exit 这个 VM- -exit 可称为“APIC- access Vm-exit。
-
- (1) 尝试线性访间（包括读和写）APIC- access page 页面内不支持的 offset 位置将产  4E Apic-access Vm-exit
-
-当“use TPR shadow”为 0 时，所有的 offset 位置都不支持。
-
-当“use TPR shadow“为 1, 且“APIC- register virtualization“与“virtual- -Interrupt  delivery 都为 0 时，仅有 offset 为 80H 位置（TPR）被支持
-
-当“use TPR shadow 为 1, 且“APIC- -register virtualization”为 0, " virtual-  interrupt delivery”为 1 时，支持下面的访问： offset 为 80H 位置（TPR）支持读写
-
- offset 为 B 位置（EOI）与 300H 位置（ICR 低 32 位）支持写访问。
-
-当“use TPR shadow 为 1, 且“APIC- register virtualization 为 1 时，表 7-2 中所列的所有 offset。位置可访问。
-
- (2) 尝试 guest-physical i 访问（包括读和写）APIC- access page 页面内任何的 offset 位置将产生 APC- access Vm-exit
-
-《（Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC- access page 页面可能会也可能不会产生 Vm-exit。当不产生 APIC- access Vm-exit 时，可能会访问到  virtual- APIC page 页面内的数据。
-
-7.2.6.1APIC- access Vm-exit 优先级别
-
-当 guest 尝试访问 APIC- access page 页面时，可能会存在多个引发 Vm-exit 或其他事件的条件。例如下面的代码。
-
- mov eax,  [ebx+ LAPIC_ID 读取 APICID 值
-
-在上面的代码里，guest 尝试通过线性地址读取 local APIC 的 ID 寄存器值。这条指令可能会产生多个异常。例如：它可能由于地址的 offset 值超过了 DS 的 limit 而产生#GP
+当使用 x2APIC 模式虚拟化机制时，guest 访问 local APIC MSR 同样访问到 `virtual-APIC page` 页面内的虚拟寄存器。如同图 7-7 所示，所不同的是通过 MSR 来访问 local APIC 物理页面。
