--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -10,25 +10,32 @@
 当“`use TPR shadow`”为 1 时，引入了一个被称为“`virtual-APIC page`”的**影子页面**(shadow page)。这个影子页面与物理 APIC page 样是 4K 大小，是 local APIC 的虚拟页面。
 
 * 当“`APIC-register virtualization`”为 1 时，`virtual-APIC page` 页面内存在**每个 local APIC 寄存器**对应的一份**影子数据**（即**虚拟 local APIC 寄存器**）。
+
 * 当“`APIC-register virtualization`”为 0 时，还细分有下面的情况：
+
     * "`virtual-interrupt delivery`"为 0 时，只有偏移量为 **80H** 的 **VTPR** 寄存器(`virtual-TPR`）是有效的。**其他位置的数据属于无效**（不可访问）。
+
     * "`virtual-interrupt delivery`"为 1 时，除了偏移量为 **80H** 的 **VTPR** 寄存器外，还有偏移量为 **BOH** 的 **VEZOI** 寄存器（`virtual-EOI`），以及偏移量为 **300H** 的 **VICR** 寄存器（`virtual-ICR`）的**低 32 位**可以进行**写访问**，但**不能进行读访问**! **其他位置的数据属于无效**（不可访问）。
 
 `virtual-APIC page` 页面的 64 位**物理地址**需要在 `virtual-APIC address` 字段里提供。这个 4K 的页面属于 VMCS 区城所引用的数据结构区域（例如 IO bitmap 与 MSR  bitmap), VMM 在初始化 VMCS 区域时需要为 VM 分配这样的一个 4K 页面。
 
-注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面。
+注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面; 而 `APIC-access page`页面仅仅在 xapic 模式中存在.
 
 1. 虚拟 local APC 寄存器
 
 `virtual-APIC page` 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了可访问的虚拟 local APIC 寄存器.
 
+![2021-01-03-15-28-41.png](./images/2021-01-03-15-28-41.png)
 
+![2021-01-03-15-29-03.png](./images/2021-01-03-15-29-03.png)
 
-如前面所述，只有在“`APIC-register virtualization`”为 1 时，表中**所有的虚拟寄存器是可访问的**。
+如前面所述，
 
-“`APIC-register virtualization`”与“`virtual-interrupt delivery`”都为 **0** 时，只有 **VTPR** 是**可访问**的。
+* 只有在“`APIC-register virtualization`”为 1 时，表中**所有的虚拟寄存器是可访问的**。
 
-“`APIC-register virtualization`”为 **0** 且 "`virtual-interrupt delivery`"为 **1** 时，只有 **VTPR**(**读/写**), **VEOI**(**只写**)以及 **VICR**(偏移量 300H，**只写**)是可访问的。
+* “`APIC-register virtualization`”与“`virtual-interrupt delivery`”都为 **0** 时，只有 **VTPR** 是**可访问**的。
+
+* “`APIC-register virtualization`”为 **0** 且 "`virtual-interrupt delivery`"为 **1** 时，只有 **VTPR**(**读/写**), **VEOI**(**只写**)以及 **VICR**(偏移量 300H，**只写**)是可访问的。
 
 部分 local APIC 对应的虚拟寄存器是**不可访问**的，譬如偏移量为 **AOH** 的 **VPPR**(`virtual processor-priority register`，**虚拟处理器优先级别寄存器**）。尝试访问则产生 VM-exit。
 
