--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/6. APIC-access VM-exit.md
@@ -1,11 +1,11 @@
 
-当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为“APIC- access Vm-exit。
+当"`virtualize APIC accesses`" 为 1 时，guest 尝试进行下面的访问将产生 VM-exit, 这个 VM-exit 可称为 "APIC- access Vm-exit"。
 
-(1) 尝试**线性访问**(包括读和写) APIC-access page 页面内不支持的 offset 位置将产生 `APIC-access VM-exit`.
+(1) 尝试**线性访问**(包括读和写) `APIC-access page` 页面内不支持的 offset 位置将产生 `APIC-access VM-exit`.
 
 * 当“use TPR shadow”为 0 时，所有的 offset 位置都不支持。
 
-当“use TPR shadow“为 1, 且“APIC- register virtualization“与“virtual- -Interrupt  delivery 都为 0 时，仅有 offset 为 80H 位置（TPR）被支持
+* 当“use TPR shadow“为 1, 且“APIC- register virtualization“与“virtual- -Interrupt  delivery 都为 0 时，仅有 offset 为 80H 位置（TPR）被支持
 
 当“use TPR shadow 为 1, 且“APIC- -register virtualization”为 0, " virtual-  interrupt delivery”为 1 时，支持下面的访问： offset 为 80H 位置（TPR）支持读写
 
@@ -15,7 +15,7 @@
 
  (2) 尝试 guest-physical i 访问（包括读和写）APIC- access page 页面内任何的 offset 位置将产生 APC- access Vm-exit
 
-《（Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC- access page 页面可能会也可能不会产生 Vm-exit。当不产生 APIC- access Vm-exit 时，可能会访问到  virtual- APIC page 页面内的数据。
+《Intel 手册》明确表明：guest 尝试 physical access（物理访问）APC- access page 页面可能会也可能不会产生 Vm-exit。当不产生 APIC- access Vm-exit 时，可能会访问到  virtual- APIC page 页面内的数据。
 
 7.2.6.1APIC- access Vm-exit 优先级别
 
