--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -73,7 +73,7 @@ guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问*
 
 在物理访问里，发起访问 `APIC-access page` 页面的物理地址，**不是由线性地址或者 guest-physical address 转换**而来。
 
-取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 `APC-access page` 页面可以产生 VM-exit，成功访问 virtual-APIC page 内的虚拟寄存器或者执行某些虚拟化操作。
+取决于 "`use TPR shadow`"、“`APIC-register virtualization`" 以及“`virtual-interrupt delivery`" 位的设置，guest 访问 `APC-access page` 页面可以**产生 VM-exit**，成功访问 `virtual-APIC page` 内的虚拟寄存器或者执行某些虚拟化操作。具体见 `7.2.5` 和 `7.2.6`.
 
 # 3. APIC-access page 的设置
 
@@ -195,5 +195,5 @@ DoWriteMsrForApicBase.SetApicAccessPage:
         call append_vmexit_msr_load_entry
 ```
 
-通过在 `VM-exit MSR-load` 列表里增加 `IA32_APIC_BASE` 寄存器数据来恢复 host 原值. 然而, 由于 VMM 监控了 guest 尝试更改 `IA32_APIC_BASE` 寄存器的操作。实际上, **IA32_APIC_BASE 寄存器并没有被修改过**。在这种情况下，恢复 host  IA32_APIC_BASE 寄存器操作不是必需的！
+通过在 `VM-exit MSR-load` 列表里增加 `IA32_APIC_BASE` 寄存器数据来恢复 host 原值. 然而, 由于 VMM 监控了 guest 尝试更改 `IA32_APIC_BASE` 寄存器的操作。实际上, **IA32_APIC_BASE 寄存器并没有被修改过**。在这种情况下，恢复 host IA32_APIC_BASE 寄存器操作不是必需的！
 
